===================
2018/12/17
v 6-0.621

- Changed language version to 3.2.
- Added system function for sharing function object bodies, "share_body". Related methods:
-- FunctionObject::createFromBody()
-- Engine::process_sys_share_body( FuncFoundTask& )
-- Engine::shareBody( Function&, Function& )
- Changed Function::set(Function&) to Function::set(Function&, bool) to allowing disabling scope copying.
DEV NOTE: Even for "share_body", Function::result has been copied because otherwise it could be indirectly changed via for example increment methods.
- Fixed Function::operator=() to return its own address. (Wasn't used but users might want it.)
- Fixed RefVariableStorage::operator=() to return its own address. (Wasn't used.)
- Fixed isIntegerObject() by giving it a return (of false) when the if-condition was not fulfilled.
- Fixed isDecimalNumObject() by giving it a return (of false) when the if-condition was not fulfilled.


===================
2018/12/12, 2018/12/16
v 6-0.62

- Changed ObjectType::Decimal to ObjectType::DecimalNum.
- Added method virtual bool Object::supportsInterface(ObjectType::Value) and implementations to all built-in Object descendants.
- Removed old commented out code regarding ObjectType::Value values.
- Changed FFIServices::demandArgType() and demandAllArgsType() to use Object::supportsInterface().
- Fixed error message in FFIServices::demandAllArgsType() to use index+1.
- Cleaned up code.


===================
2018/12/4-5
v 6-0.61

- Added OpcodeStrandStack* activeOpcodeStrandStack to the Engine and had execute() use it.
- Changed Engine::runFunctionObject() to generate its own OpStrandStack so that it would be independent of the execution cycle currently being run by the engine. It is used to set activeOpcodeStrandStack.
- Made it possible for OpStrandContainers to be considered immutable (that is, don't allow destruction of their strands). This enables runFunctionObject() to rerun a function.